--- a/index.html
+++ b/index.html
@@ -107,10 +107,17 @@ I'm excited to share a sneak peek of StyleHub, my newly built fashion and access
     <h2>Contact Me</h2>
 
     <div class="contact-info">
-    <p>You can reach me directly at:</p>
-    <p><a href="mailto:jsinha1999@gmail.com">Contact Me </a>
-      <p><a href="https://www.linkedin.com/in/juhi-sinha-2aa280176/" class="LinkedIn -link" target="_blank">LinkedIn profile </a></p>
-  </div>
+  <p>You can reach me directly at:</p>
+  <p>
+    <a href="mailto:jsinha1999@gmail.com">Contact Me</a>
+  </p>
+  <p>
+    <a href="https://www.linkedin.com/in/juhi-sinha-2aa280176/" class="LinkedIn-link" target="_blank">
+      LinkedIn Profile
+    </a>
+  </p>
+</div>
+
 
     <form id="contactForm">
       <input type="text" name="name" placeholder="Your Name" required />
@@ -123,7 +130,7 @@ I'm excited to share a sneak peek of StyleHub, my newly built fashion and access
 
   <!-- Footer -->
   <footer class="footer">
-    <p>MAHI SONI</p>
+    <p>JUHI SINHA</p>
   </footer>
 
   <script src="home.js"></script>
