--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <!-- Project 2 -->
     <div class="project-card">
-      <img src="2proj.jpg" alt="Project 2 Screenshot" />
+      <img src="2proj.png" alt="Project 2 Screenshot" />
       <h3>Online_Shopping_App_with_Amazon-Q/</h3>
       <p>Launched My Own E-Commerce Website Built with Amazon Q
 
