--- a/index.html
+++ b/index.html
@@ -77,18 +77,20 @@
     </div>
 
     <!-- Project 2 -->
-    <div class="project-card">
-      <img src="2proj.png" alt="Project 2 Screenshot" />
-      <h3>Online_Shopping_App_with_Amazon-Q/</h3>
-      <p>Launched My Own E-Commerce Website Built with Amazon Q
+<div class="project-card">
+  <img src="2proj.png" alt="Project 2 Screenshot" />
+  <h3>Online_Shopping_App_with_Amazon-Q</h3>
+  <p>
+    Launched My Own E-Commerce Website Built with Amazon Q.<br />
+    I'm excited to share a sneak peek of StyleHub, my newly built fashion and accessories e-commerce platform with a clean, modern UI.
+  </p>
+  <div class="project-links">
+    <a href="https://github.com/juhisinha422/Online_Shopping_App_with_Amazon-Q/tree/main" target="_blank">
+      GitHub
+    </a>
+  </div>
+</div>
 
-I'm excited to share a sneak peek of StyleHub, my newly built fashion and accessories e-commerce platform all with a clean, modern UI.
-</p>
-      <div class="project-links">
-        <a href="https://github.com/juhisinha422/Online_Shopping_App_with_Amazon-Q/tree/main" target="_blank">GitHub</a>
-  
-      </div>
-    </div>
 
     <!-- Add more projects here -->
   </div>
