--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
   <!-- Profession -->
-  <section id="education" class="section">
+  <section id="profession" class="section">
     <h2>Profession</h2>
     <p><strong>Tata Consultancy Services (TCS) </strong> - AWS DevOps Engineer (2021-2022)</p>
     <p><strong>Tata Consultancy Services (TCS)</strong> - DevOps Engineer (2022 - Present)</p>
