--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     <div class="contact-info">
   <p>You can reach me directly at:</p>
   <p>
-    <a href="mailto:jsinha1999@gmail.com">Contact Me</a>
+    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jsinha1999@gmail.com" target="_blank">Contact Me</a>
+
   </p>
   <p>
     <a href="https://www.linkedin.com/in/juhi-sinha-2aa280176/" class="LinkedIn-link" target="_blank">
