--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <div class="skill-card">Ansible</div>
     <div class="skill-card">SonarQube</div>
     <div class="skill-card">Linux</div>
+        <div class="skill-card">JIRA</div>
     <div class="skill-card">Git & GitHub</div>
   </div>
 </section>
