--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- About -->
   <section id="about" class="section">
     <h2>About Me</h2>
-    <p><i>A highly skilled and results-driven DevOps and Cloud Engineer with overall 4 years of experience and 3.4 years of experience in the IT industry with excellent communication skills. Proficient in tools like CI/CD, Containerization Kubernetes, Docker, Jenkins, and AWS services, with a proven ability to enhance deployment efficiency, reliability, and cost optimization.
+    <p><i>I am a skilled and results-driven DevOps Engineer with a passion for streamlining software development processes and improving operational efficiency. With a solid background in cloud migration,cloud architecture,continuous integration/continuous deployment (CI/CD), and automation, I strive to create robust and scalable solutions that drive business growth and success.
 
 </i>
 
